# ContextLens

./: .gitignore  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md
examples/: demo_agent.py
examples/validation/: README.md  ex1_summarization_middleware.py  ex2_langmem_node.py  ex3_manual_removemessage.py  ex4_trim_negative_control.py  ex5_anthropic_context_editing.py  ex6_anthropic_server_compaction.py  ex7_headroom_ccr.py  harness.py  tools.py
src/contextlens/: __init__.py  classify.py  cli.py  models.py  profiler.py  quality.py  report.py  report_template.html  tokenizers.py
src/contextlens/integrations/: anthropic_client.py  headroom_adapter.py  langchain_handler.py
src/contextwatch/: __init__.py  cli.py  models.py  profiler.py  report.py  report_template.html  tokenizers.py
src/contextwatch/integrations/: headroom_adapter.py  langchain_handler.py
src/ctxscope/: __init__.py  cli.py  models.py  profiler.py  report.py  report_template.html  tokenizers.py
src/ctxscope/integrations/: headroom_adapter.py  langchain_handler.py
tests/: test_headroom_adapter.py  test_profiler.py
